- create and publish docker image 001

--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
 	id 'org.springframework.boot' version '2.3.3.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
 	id 'org.sonarqube' version '3.0'
+	id 'com.palantir.docker' version '0.25.0'
 }
 
 group = 'com.vambita.work'
@@ -30,12 +31,22 @@ sonarqube {
 	}
 }
 
+docker {
+	dependsOn build
+	name "vambita/${project.name}:${project.version}"
+	dockerfile file('docker/Dockerfile')
+	buildArgs([BUILD_VERSION: "${project.version}"])
+	tags 'latest'
+	noCache true
+}
+
 repositories {
 	mavenCentral()
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
 	compileOnly 'org.projectlombok:lombok'
 
