- upgrade Spring Boot & Gradle version

--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,15 @@
 plugins {
 	id 'java'
 	id 'jacoco'
-	id 'org.springframework.boot' version '2.3.3.RELEASE'
-	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
+	id 'org.springframework.boot' version '2.5.5'
+	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'org.sonarqube' version '3.0'
 	id 'com.palantir.docker' version '0.25.0'
 }
 
 group = 'com.vambita.work'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '14'
+sourceCompatibility = '16'
 
 bootBuildImage {
 	imageName = "vambita/${project.name}:${project.version}"
